Bug 351746 - Weird default height for the main window
Summary: Weird default height for the main window
Status: RESOLVED FIXED
Alias: None
Product: kronometer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-25 09:53 UTC by Elvis Angelaccio
Modified: 2016-06-28 12:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.0.1
Sentry Crash Report:


Attachments
Screenshot (25.98 KB, image/png)
2015-08-25 09:54 UTC, Elvis Angelaccio
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Elvis Angelaccio 2015-08-25 09:53:16 UTC
After installing and running Kronometer for the first time, the MainWindow has too much height.
Workaround: resize it manually to a smaller height and close Kronometer. The next time you open it, the previous height will be restored.

Reproducible: Always
Comment 1 Elvis Angelaccio 2015-08-25 09:54:14 UTC
Created attachment 94213 [details]
Screenshot

Screenshot showing the issue.
Comment 2 Elvis Angelaccio 2015-08-25 11:28:48 UTC
Git commit 83ee2bb230dd09b8d1e2b67a2931d2d12239094b by Elvis Angelaccio.
Committed on 25/08/2015 at 10:54.
Pushed by elvisangelaccio into branch 'master'.

Fix MainWindow default height
FIXED-IN: 2.0.1

Passing QSize(0, 0) to setupGUI() is a quick workaround for the issue. Btw any QSize
smaller than minimumSizeHint() should do the job.

However, an actual solution should be found in the future, rather than this workaround.

M  +2    -1    src/mainwindow.cpp

http://commits.kde.org/kronometer/83ee2bb230dd09b8d1e2b67a2931d2d12239094b
Comment 3 Elvis Angelaccio 2016-04-07 12:25:06 UTC
Git commit 809fe313a3475424dbc74e08c546684ad1988140 by Elvis Angelaccio.
Committed on 07/04/2016 at 12:17.
Pushed by elvisangelaccio into branch '2.0'.

Fix invisible main window with Qt 5.6

The workaround in commit 83ee2bb2 results in an invisible main window with Qt
5.6

This patch is still a workaround, but better than before.

M  +5    -2    src/mainwindow.cpp

http://commits.kde.org/kronometer/809fe313a3475424dbc74e08c546684ad1988140
Comment 4 Elvis Angelaccio 2016-06-28 12:10:22 UTC
Git commit c081e3c31e3060a1af66703ad6884a252be34924 by Elvis Angelaccio.
Committed on 28/06/2016 at 12:09.
Pushed by elvisangelaccio into branch '2.1'.

Fix restoring of window size

We resize() the main window only when no window size was saved in the config
file.
Related: bug 361494
FIXED-IN: 2.1.1

M  +18   -2    src/mainwindow.cpp
M  +5    -0    src/mainwindow.h

http://commits.kde.org/kronometer/c081e3c31e3060a1af66703ad6884a252be34924