Fix MainWindow default height

BUG: 351746
FIXED-IN: 2.0.1

Passing QSize(0, 0) to setupGUI() is a quick workaround for the issue. Btw any QSize
smaller than minimumSizeHint() should do the job.

However, an actual solution should be found in the future, rather than this workaround.